// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CamelComponentSorter edge cases should handle empty objects 1`] = `
"{}
"
`;

exports[`CamelComponentSorter edge cases should handle kamelet URIs 1`] = `
"from:
  uri: kamelet:aws-s3-source
  parameters:
    bucketNameOrArn: my-bucket
    region: us-east-1
  steps: []
"
`;

exports[`CamelComponentSorter edge cases should handle nested generic objects 1`] = `
"route:
  id: test
  metadata:
    aProp: first
    mProp: middle
    zProp: last
"
`;

exports[`CamelComponentSorter edge cases should handle null and undefined values 1`] = `
"from:
  id: test
  description: null
  parameters: {}
"
`;

exports[`CamelComponentSorter edge cases should handle processors without catalog entries 1`] = `
"anotherProp: value2
unknownProp: value
"
`;

exports[`CamelComponentSorter integration tests with real YAML routes should handle choice with when/otherwise correctly 1`] = `
"route:
  id: choice-route
  from:
    uri: direct:start
    steps:
      - choice:
          when:
            - simple: \${header.type} == 'A'
              steps:
                - log:
                    message: Type A
            - simple: \${header.type} == 'B'
              steps:
                - log:
                    message: Type B
          otherwise:
            steps:
              - log:
                  message: default case
"
`;

exports[`CamelComponentSorter integration tests with real YAML routes should handle doTry/doCatch/doFinally correctly 1`] = `
"route:
  id: error-route
  from:
    uri: direct:start
    steps:
      - doTry:
          doCatch:
            - exception:
                - java.io.IOException
              steps:
                - log:
                    message: caught error
          doFinally:
            steps:
              - log:
                  message: finally
          steps:
            - to:
                uri: mock:test
"
`;

exports[`CamelComponentSorter integration tests with real YAML routes should sort a complete unsorted route 1`] = `
"route:
  id: test-route
  description: Test route
  from:
    uri: timer:test
    parameters:
      timerName: myTimer
      delay: 1000
    steps:
      - to:
          uri: log:info
          parameters:
            loggerName: InfoLogger
            message: Processing
      - setHeader:
          name: myHeader
          simple: \${body}
"
`;

exports[`CamelComponentSorter integration tests with real YAML routes should sort complete route and output valid YAML 1`] = `
"route:
  id: timer-route
  description: A simple timer route
  from:
    uri: timer:test
    parameters:
      timerName: myTimer
      period: 5000
    steps:
      - to:
          uri: log:info
          parameters:
            showHeaders: true
            message: Hello World
"
`;

exports[`CamelComponentSorter should maintain data integrity through sort 1`] = `
"route:
  id: original-route
  description: Test route
  from:
    uri: timer:test
    parameters:
      timerName: myTimer
      delay: 500
      period: 1000
    steps:
      - setHeader:
          name: header1
          simple: \${body}
      - to:
          uri: log:info
          parameters:
            level: INFO
            message: Processing
"
`;

exports[`CamelComponentSorter sortCamelStep should preserve step array order 1`] = `
"- log:
    message: step 1
- to:
    uri: direct:a
- log:
    message: step 2
"
`;

exports[`CamelComponentSorter sortCamelStep should sort a choice step with when and otherwise 1`] = `
"choice:
  id: choice-1
  when:
    - simple: \${body} == 1
      steps:
        - log:
            message: when
  otherwise:
    steps:
      - log:
          message: otherwise
"
`;

exports[`CamelComponentSorter sortCamelStep should sort a setHeader step 1`] = `
"setHeader:
  id: header-1
  name: myHeader
  simple: \${body}
"
`;

exports[`CamelComponentSorter sortCamelStep should sort expression language properties - constant expression object 1`] = `
"setBody:
  id: body-1
  constant:
    id: constant-1
    expression: constant value
    resultType: java.lang.String
"
`;

exports[`CamelComponentSorter sortCamelStep should sort expression language properties - simple expression object 1`] = `
"setHeader:
  id: header-1
  name: myHeader
  simple:
    id: simple-1
    expression: \${body}
    resultType: java.lang.String
"
`;

exports[`CamelComponentSorter sortCamelStep should sort setHeaders with array of header expressions 1`] = `
"setHeaders:
  id: headers-1
  headers:
    - name: header1
      simple:
        id: simple-1
        expression: \${body.id}
        resultType: java.lang.String
    - name: header2
      constant:
        id: constant-1
        expression: constant value
        resultType: java.lang.String
"
`;

exports[`CamelComponentSorter sortProcessorObject should sort from processor properties 1`] = `
"from:
  id: from-1
  uri: timer:test
  parameters:
    timerName: test
  steps: []
"
`;

exports[`CamelComponentSorter sortProcessorObject should sort log component parameters 1`] = `
"to:
  uri: log:info
  parameters:
    loggerName: MyLogger
    level: INFO
    showHeaders: true
    message: Hello
"
`;

exports[`CamelComponentSorter sortProcessorObject should sort route properties by catalog index 1`] = `
"route:
  id: test-route
  description: A test route
  from:
    uri: timer:test
    steps: []
"
`;

exports[`CamelComponentSorter sortProcessorObject should sort timer component parameters by catalog index 1`] = `
"from:
  uri: timer:test
  parameters:
    timerName: myTimer
    delay: 1000
    period: 5000
    repeatCount: 10
  steps: []
"
`;
